responsive layout but fixed: ABOUT popup title stays visible at bottom

--- a/src/main.css
+++ b/src/main.css
@@ -113,10 +113,18 @@ hr {
 .abt-title:hover {
   text-shadow: 0px 1px 1px orange;
 }
+.sticky {
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
+  top: 0px;
+  bottom: calc(100vh - 40px)
+}
 
 .abt.row {
-  /*display: -webkit-flex;*/
-  /*display: flex;*/
+  display: -webkit-flex;
+  display: flex;
   -webkit-flex-direction: row; /* works with row or column */
   flex-direction: row;
   /*-webkit-align-items: center;*/
@@ -124,7 +132,6 @@ hr {
   /*align-items: center;*/
   -webkit-justify-content: center;
   justify-content: center;
-
   /*align-items: center;*/
   /*justify-content: space-around;*/
 }
